--- a/src/my_project_frontend/index.html
+++ b/src/my_project_frontend/index.html
@@ -9,12 +9,12 @@
   <title>IC Hello Starter</title>
 </head>
 
-<body>
+<body class="bg-sky-950	">
   <noscript>
     <strong>We're sorry but this application doesn't work properly without
       JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
-  <div id="app"></div>
+  <div id="app"> </div>
   <script src="/src/main.js" type="module"></script>
 </body>
 
